<resources>
    <string name="app_name">Mes Recettes</string>
    <string name="recipe_creation">Création d\'une recette</string>
    <string name="recipe_ingredient">Ingrédient</string>
    <string name="recipe_ingredients">Ingrédients</string>
    <string name="recipe_instruction">Étape</string>
    <string name="recipe_instructions">Étapes</string>
    <string name="recipe_quantity">Quantité</string>
    <string name="add_instruction">Ajouter une étape</string>
    <string name="add_ingredient">Ajouter un ingrédient</string>
    <string name="ingredients_list_empty">La liste des ingrédients ne peut pas être vide</string>
    <string name="instructions_list_empty">La liste des étapes ne peut pas être vide</string>
    <string name="menu_home">Accueil</string>
    <string name="menu_search">Rechercher</string>
    <string name="menu_library">Bibliothèque</string>
    <string name="cd_recipe_image">Image de la recette</string>
    <string name="recipe_preparation">Préparer la recette</string>
    <string name="creation_title">Indiquez un nom et une petite description de votre recette</string>
    <string name="creation_recipe_name">Nom de la recette</string>
    <string name="creation_recipe_description">Description de la recette</string>
    <string name="next">Suivant</string>
    <string name="creation_ingredients_title">Indiquez les ingrédients de votre recette</string>
    <string name="creation_steps_title">Indiquez les étapes de votre recette</string>
    <string name="timing">Durée (mn)</string>
    <string name="creation_photo_title">Vous pouvez ajouter une photo de votre recette</string>
    <string name="creation_finish">Terminer la création</string>
    <string name="error_photo">Une erreur est survenue lors de la sélection de la photo</string>
    <string name="create_recipe">Créer une recette</string>
    <string name="jarvis_hint">Jarvis peut vous aider à naviguer parmi les étapes. Par exemple, vous pouvez dire :
        \'Jarvis, passe à l\'étape suivante\'
    </string>
    <string name="previous">Précédent</string>
    <string name="fav_recipes">Vos recettes favorites</string>
    <string name="search_title">Rechercher</string>
    <string name="finish">Terminer</string>
    <string name="detail_next">Affiche l\'étape suivante</string>
    <string name="detail_previous">Affiche l\'étape précédente</string>
    <string name="favorite_button">Bouton de favori</string>
</resources>
