<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="viewmodel"
                type="com.iutorsay.recipesapplication.viewmodels.CreationViewModel"
        />
    </data>

    <ScrollView
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/creation_steps_title"
                    android:fontFamily="@font/circular_std_bold"
                    android:textSize="@dimen/font_larger"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:id="@+id/title"/>

            <android.support.design.card.MaterialCardView
                    android:id="@+id/card_view"
                    app:cardElevation="@dimen/spacing_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/button_add_step"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:cardCornerRadius="@dimen/spacing_tiny"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:layout_marginEnd="16dp" android:layout_marginTop="16dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView
                            android:text="@string/recipe_instructions"
                            android:padding="@dimen/spacing_normal"
                            android:fontFamily="@font/circular_std_bold"
                            android:textColor="@color/black"
                            android:textSize="@dimen/font_large"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    <View
                            android:layout_marginStart="@dimen/spacing_normal"
                            android:layout_marginEnd="@dimen/spacing_normal"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="@dimen/spacing_small"
                            android:background="@android:color/darker_gray"/>

                    <android.support.v7.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/spacing_normal"
                            android:paddingEnd="@dimen/spacing_normal"
                            android:layout_marginBottom="@dimen/spacing_normal"
                            android:id="@+id/steps_recycler_view">
                    </android.support.v7.widget.RecyclerView>

                </LinearLayout>
            </android.support.design.card.MaterialCardView>

            <Button
                    android:text="@string/add_instruction"
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:id="@+id/button_add_step"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/input_timing"/>

            <android.support.design.button.MaterialButton
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_next"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/card_view"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/recipe_instruction"
                    android:text="@={viewmodel.inputStep}"
                    android:ems="10"
                    android:id="@+id/input_step"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/title"
                    android:layout_marginTop="32dp"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:text="@={viewmodel.inputStepTiming}"
                    android:hint="@string/timing"
                    android:ems="10"
                    android:id="@+id/input_timing" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/input_step" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"/>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</layout>