<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <data>
        <variable
            name="viewmodel"
            type="com.iutorsay.recipesapplication.viewmodels.RecipeCreationViewModel"
        />
    </data>
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:textSize="@dimen/font_larger"
                    android:text="@string/creation_title"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/circular_std_bold"
                    tools:text="@string/creation_title" android:id="@+id/textView"/>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/textinput_name"
                    android:textColorHint="@color/dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintHorizontal_bias="0.5"
                    android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView">
                <EditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:text="@={viewmodel.currentName}"
                        android:textColor="@color/black"
                        android:hint="@string/creation_recipe_name"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/dark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintHorizontal_bias="0.6"
                    android:id="@+id/textinput_description" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/textinput_name">
                <EditText
                        android:id="@+id/input_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:text="@={viewmodel.currentDescription}"
                        android:hint="@string/creation_recipe_description"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textColor="@color/grey"
                    android:drawableStart="@drawable/ic_navigate_next_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button"
                    app:layout_constraintTop_toBottomOf="@id/textinput_description" android:layout_marginTop="32dp"/>
        </android.support.constraint.ConstraintLayout>
</layout>