<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent" android:layout_width="match_parent">
    <android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent">

        <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

        <ImageView
                android:layout_width="0dp"
                android:contentDescription="Image de la recette"
                android:layout_height="175dp" tools:srcCompat="@tools:sample/avatars"
                android:id="@+id/recipe_picture"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="centerCrop"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_description"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/recipe_picture" android:textSize="@dimen/font_large"/>
        <TextView
                android:text="@string/recipe_ingredients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/ingredients" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/recipe_description"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:textSize="@dimen/font_large"
                android:textColor="@android:color/black"/>
        <TextView
                android:text="@string/recipe_instructions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/instructions"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/recipe_ingredients"
                android:textSize="@dimen/font_large" android:textColor="@color/black"/>
        <android.support.v7.widget.RecyclerView
                android:layout_width="395dp"
                android:layout_height="167dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/ingredients" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/recipe_ingredients"/>
        <android.support.v7.widget.RecyclerView
                android:layout_width="395dp"
                android:layout_height="133dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/instructions" android:id="@+id/recipe_instructions"/>
        <Button
                android:text="@string/recipe_preparation"
                android:background="@drawable/rounded_button"
                android:paddingTop="@dimen/spacing_normal"
                android:paddingBottom="@dimen/spacing_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/preparation_button"
                app:layout_constraintTop_toBottomOf="@+id/recipe_instructions" android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

        <android.support.design.widget.BottomNavigationView android:id="@+id/bottom_navigation"
                                                            android:background="@color/white"
                                                            android:layout_gravity="bottom"
                                                            android:layout_width="match_parent"
                                                            android:layout_height="0dp"
                                                            app:menu="@menu/bottom_navigation_menu"
                                                            app:itemIconTint="@color/navbar_item_state"
                                                            app:itemTextColor="@color/navbar_item_state"
                                                            app:layout_constraintBottom_toBottomOf="parent"
                                                            app:layout_constraintStart_toStartOf="parent"
                                                            app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>